--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@types/node": "^14.0.14"
     },
     "scripts": {
-        "dev": "clasp push --watch"
+        "dev": "clasp push --watch",
+        "push": "clasp push"
     }
 }
